# personal-obs-pipeline

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIARIO-DE-BATALLA.md  Makefile  OPERATIONS.md  README.md  ROADMAP-RAILS.md  SYNC-GEMFILE.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  telegraf.conf
.github/: PULL_REQUEST_TEMPLATE.md
DOCS/: ARCHITECTURE.md  BACKFILL-NUMERO-TARJETA.md  CI-REFERENCIA.md  CONTEXT.md  COOLIFY-DEPLOYMENT.md  DEVOPS-ROADMAP.md  DIARIO-DE-BATALLA.md  EVENT-REPOSITORY-DESIGN.md  FECHA-VENCIMIENTO.md  INFRA_MEMORANDUM.md  OPERATIONS.md  ROADMAP-RAILS-MEJORADO.md  TEST-PROFILING.md  asyncapi.yaml
ingestion-engine/: .coverage  Dockerfile  Dockerfile.prod  debug_consumer.py  ingest.py  main.py  pyproject.toml  requirements.txt  test_ingest.py  upload_files.py
ingestion-engine/bank_extractors/: __init__.py  amex_extractor.py  amex_pdf_extractor.py  bank_a_extractor.py  bank_b_extractor.py  bapro_mc_pdf_extractor.py  bapro_pdf_extractor.py  bbva_extractor.py  bbva_mc_pdf_extractor.py  bbva_pdf_extractor.py  visa_extractor.py
ingestion-engine/bank_extractors/pdf/: README.md  __init__.py  base.py  utils.py
ingestion-engine/scripts/: report_vencimientos.py
ingestion-engine/tests/: __init__.py  test_data_standardizer.py  test_extractors.py  test_extractors_pdf.py  test_main_feedback.py  test_s3_client.py
ingestion-engine/utils/: cleaning.py  data_standardizer.py  logging_config.py  s3_client.py
scripts/: test_grafana_dashboards.sh  test_kafka_persistence.sh
web-enrichment-app/: .gitignore  Dockerfile  (+4 more)
(+221 files in other folders)
