[project]
name = "ingestion-engine"
version = "0.1.0"
description = "Bank ingestion and extraction pipeline"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
