[project]
name = "ingestion-engine"
version = "0.1.0"
description = "Bank ingestion and extraction pipeline"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "regression: tests que usan PDFs reales en samples/ (pueden omitirse si no existen)",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "test_*.py", "conftest.py", "main.py", "debug_consumer.py", "ingest.py", "upload_files.py"]

[tool.coverage.report]
fail_under = 70  # temporal, subir gradualmente hacia 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
